added news Changes to be committed: 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   internal/app/apiserver/apiserver.go 	modified:   internal/app/apiserver/endpoints/endpoints.go 	new file:   internal/app/apiserver/endpoints/newsendpoint.go 	modified:   internal/app/apiserver/endpoints/publicationendpoint.go 	modified:   internal/app/store/publicationRepository.go
