# docs/swagger.json
@@ -4,6 +4,36 @@
         "contact": {}
     },
     "paths": {
+        "/news": {
+            "get": {
+                "description": "Get News",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Publication"
+                ],
+                "summary": "Get News",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "offset from first responses",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "restriction on return of publications",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/publication": {
             "post": {
                 "description": "Post publication",
